<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorAccent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qrcode_not_registered"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/tv_create_shelf_message"
        android:padding="16dp"
        android:textSize="20sp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:id="@+id/bt_create_shelf_create"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/bt_create_shelf_cancel"
        app:layout_constraintTop_toBottomOf="@id/tv_create_shelf_message"
        android:layout_margin="16dp"
        android:onClick="create"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/bt_create_shelf_cancel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/bt_create_shelf_create"
        app:layout_constraintBaseline_toBaselineOf="@id/bt_create_shelf_create"
        android:layout_margin="16dp"
        android:onClick="cancel"/>

</android.support.constraint.ConstraintLayout>